<resources>
    <string name="app_name">Problem Solver</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="button1">FWGC Problem</string>
    <string name="FWGCwelc">Welcome to the FWGC Problem</string>
    <string name="FWGCintro">A farmer must cross a river with wolf, goat and cabbage.
    He can only take one thing at a time and the goat and wolf cannot be left alone,
    and neither can the goat or the cabbage. Find a way to cross safely </string>
    <string name="button2">Puzzle Problem</string>
    <string name="welcome">Problem Solver App</string>
    <string name="welcome2">choose problem</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="puzzle_intro">This is a puzzle problem, try get the puzzle so that the numbers go
        around in a circle starting at 1 and going all the way to 8.
        Where 1 is in the top left and the blank is in the middle</string>
    <string name="puzzle_welc">Welcome to the Puzzle Problem</string>
    <string name="description">description</string>
    <string name="goal">Goal State</string>
    <string name="current">Current State</string>
    <string name="count">Moves</string>
    <string name="start">Start State</string>
    <string name="start_button">Start</string>
    <string name="FWGCMove1">Goes Alone</string>
    <string name="FWGCMove2">Takes Wolf</string>
    <string name="FWGCMove3">Takes Goat</string>
    <string name="FWGCMove4">Takes Cabbage</string>
    <string name="FWGCgoal"></string>
    <string name="reset">Reset</string>
    <string name="solve">Solve</string>
    <string name="nextButton">Next</string>
    <string name="slide1">Slide 1</string>
    <string name="slide2">Slide 2</string>
    <string name="slide3">Slide 3</string>
    <string name="slide4">Slide 4</string>
    <string name="slide5">Slide 5</string>
    <string name="slide6">Slide 6</string>
    <string name="slide7">Slide 7</string>
    <string name="slide8">Slide 8</string>
    <string name="bench">Benchmarks</string>
    <string name="stat"></string>

</resources>