<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.ProblemSolver.PopupOverlay" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="196dp"
            android:layout_height="98dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:height="50dp"
            android:onClick="button1"
            android:text="@string/button1"
            android:textAlignment="center"
            app:backgroundTint="@color/buttonFWGC" />

        <Button
            android:id="@+id/button2"
            android:layout_width="299dp"
            android:layout_height="97dp"
            android:layout_marginTop="100dp"
            android:height="50dp"
            android:insetLeft="100dp"
            android:onClick="button2"
            android:text="@string/button2"
            app:backgroundTint="@color/buttonFWGC" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/welecome"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/welcome2"
            android:textAlignment="center"
            android:textColor="@color/welecome1"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>